html/css/styles.css
html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, em, img, strong, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td {
border:0 none;
margin:0;
outline:0 none;
padding:0;
vertical-align:baseline;
}

html, body { height: 100%; }

body { font-family: 'Open Sans', Tahoma, Arial, Verdana; }

h2 { font-weight: bold; font-size: 200%; margin-bottom: 1ex; margin-top: 1ex; color: #6D912D; }
h3 { clear: both; font-weight: normal; font-size: 150%; color: #6D912D; margin-top: 2ex; margin-bottom: 1ex; }
em {  font-style:  normal; font-weight: bold; }
code { display: block; padding: 2ex; margin-top: 2ex; margin-bottom: 2ex; color: white; background: #292929; border: .5px solid #6D912D; }
a {  color: #6D912D;  }
a:visited {  color: #85a753;  }
ul {  list-style-position: inside; }

#header { background-color: #333; width: 100%;  height: 105px; }
#logo { float: left; background: url('../img/tira_logo.png') repeat-x; width: 5em; height: 105px; text-align-center; border-right: 1px solid #85a753; }
#logo img { margin: 10px auto; display: block; }

#header-menu { overflow: hidden; height: 100%; width: 87%;}
#header-menu h1 { display: block; float: left; text-indent: -1000px; background: url('../img/title.png') no-repeat; width: 193px; height:65px; margin-top: 1ex; margin-left: 1ex; }
#header-menu ul { list-style: none;  }
#header-menu ul li { float: left; }
#header-menu ul#submenu { float: right;  font-size: 90%; font-weight: bold; margin-top: 1ex; margin-right: 2ex; }
#header-menu ul#submenu li { margin-left: 4ex; }
#header-menu ul#submenu li a { color: #757575; text-decoration: none; }
#header-menu ul#submenu li a:hover { text-decoration: underline; }
#header-menu #menu-container { height: 100%; position: relative;  }
#header-menu ul#menu { font-size: 80%;  position: absolute; bottom: 0; right: 0; }
#header-menu ul#menu li { background-color: #a9a9a9; margin-left: .5ex; width: 8em; text-align: center; height: 3ex; padding-top: 1ex; border-radius: 4px 4px 0px 0px; -ms-border-radius: 4px 4px 0px 0px; -moz-border-radius: 4px 4px 0px 0px; -webkit-border-radius: 4px 4px 0px 0px; -khtml-border-radius: 4px 4px 0px 0px; font-weight: bold; }
#header-menu ul#menu li.current, #header-menu ul#menu li:hover { background-color: #fdfdfd; color: #929292;}
#header-menu ul#menu li a { text-decoration: none; }
#header-menu ul#menu li a { color: #545454; margin-top: -.3ex; display: block; }
#header-menu ul#menu li.current a { color: #929292; }


#container { background-color: #dadada; width: 100%; float: left;  }

#inner-container { margin-left: 5em; background-color: #fefefe; height: 100%; float: left; color: #414141; background: white;  padding-left: 2%; padding-right: 2%; padding-bottom: 4%; width: 83%; }
#inner-container.home { padding-left: 1%; padding-right: 1%;  background: url('../img/tira_info.png') repeat-x; position: relative; width: 85%; }
#inner-container.forum {float:none; width=100%;}
#inner-container p { margin-bottom: 1ex; font-size: 120%; line-height: 150%; } 
#inner-container p:last-child { margin-bottom: 3ex;  }  
#inner-container ul, ol { font-size: 120%; line-height: 150%; }
#inner-container ul li { list-style: none;  background: url('../img/longobullet.png') no-repeat; padding-left: 45px; height: 40px; padding-top: .6ex; }
#inner-container ol li { background: none; list-style: decimal; list-style-position: inside; padding: 0; }

#watch { margin-top: 4ex; position: absolute; bottom: 0; }

#info { float: right;  width: 55%;  margin-left: 2ex;  margin-right: 2ex;  }
#info h1 { margin-top:1ex; padding:0; font-weight: normal; font-size: 320%; line-height: 100%; }
#info p { font-size: 110%; text-align: justify; width: 95%; display:block; margin: 1ex auto 1.5ex auto;}
#info p em { font-style: normal; font-weight: bold; }
#info span#header-first-line { display: block; text-align: left; }
#info span#header-second-line { display: block; text-align: right; }
#info #video-and-more { margin: 3.5ex auto 3.5ex auto; height: 100px; width: 350px;}
#info #video { float: left; }
#info ul#more { float: left; list-style: none; margin-left: .5ex;}
#info ul#more li { padding: 1ex; text-align: center; background-image: none; background-color: #6e6e6e; margin-bottom: .2ex;  color: white; width: 8em; border-radius: 4px; -ms-border-radius: 4px; -moz-border-radius: 4px; -webkit-border-radius: 4px; -khtml-border-radius: 4px; font-size: 90%; height: 100%; }
#info ul#more li a { color: white; text-decoration: none; }
#info ul#more li:hover { background-color: #333333; }


#features { clear: both; background: url('../img/tira_feature.png') repeat-x; overflow: hidden; float: left; width: 100%; height: 161px; }
#inner-features { float: left;  width: 87%; padding-left: 5em; height: 100%; position: relative; }
#features ul { float: left; list-style: none; font-weight: bold; color: #FFFCFF; text-shadow: 1px 1px #51bE1c; font-size: 80%;}
#features ul li { float: left;  width: 11em; margin-right: 4ex;  }
#features ul li.current, #features ul li:hover { /* background: url('../img/current_feature.png') no-repeat top center; */ }
#features ul li h3 { margin-bottom: .2ex; text-shadow: 1px 1px #51bE1c; }
#features ul li a { color: #fffcff; text-decoration: none; font-weight: bold; }
#features #download { position: absolute; right: 0; margin-top: 1.5ex;  font-size: 80%;  }
#features #download a#download-button { text-indent: -9999px; background: url('../img/download.png') no-repeat; display: block; height: 66px; width: 216px;}
#features #download span#contact-us { float: left; margin-top: .5ex; margin-right: 1ex; color: #FFFCFF; }
#features #download a#facebook, #features #download a#twitter { display: block; width: 32px; height: 32px; float: left; }
#features #download p { text-align: center; font-size: 90%; margin-top: 1ex; color:#2f4717; font-weight: bold;}
/* ... */

